Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15021

sanity-quota test_55: crash in qmt_seed_glbe_all()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.15.0
    • Lustre 2.15.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Andreas Dilger <adilger@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/91f49aaf-5601-4751-ba97-a4e400d7ab7c

      test_55 failed with the following error:

      trevis-53vm9 crashed during sanity-quota test_55
      
      Lustre: DEBUG MARKER: == sanity-quota test 55: Chgrp should be affected by group quota ==== 13:45:36 (1631886336)
      Lustre: DEBUG MARKER: /usr/sbin/lctl get_param -n osc.*MDT*.sync_*
      Lustre: DEBUG MARKER: /usr/sbin/lctl get_param -n osp.*.destroys_in_flight
      Lustre: DEBUG MARKER: lctl set_param fail_val=0 fail_loc=0
      Lustre: DEBUG MARKER: /usr/sbin/lctl get_param -n version 2>/dev/null
      Lustre: DEBUG MARKER: zpool get all
      Lustre: DEBUG MARKER: /usr/sbin/lctl conf_param lustre.quota.ost=ugp
      Lustre: DEBUG MARKER: /usr/sbin/lctl set_param -n debug=+quota,trace
      Lustre: DEBUG MARKER: lctl set_param -n os[cd]*.*MDT*.force_sync=1
      Lustre: DEBUG MARKER: lctl set_param -n os[cd]*.*MDT*.force_sync=1
      general protection fault: 0000 [#1] SMP PTI
      CPU: 1 PID: 310703 Comm: mdt00_000 4.18.0-240.22.1.el8_lustre.x86_64 #1
      RIP: 0010:qmt_seed_glbe_all+0x6f6/0x7a0 [lquota]
      Call Trace:
        qmt_set_with_lqe+0x782/0xc80 [lquota]
        qmt_set.constprop.17+0x15d/0x2e0 [lquota]
        qmt_quotactl+0x28a/0x610 [lquota]
        mdt_quotactl+0x2c7/0x7c0 [mdt]
        tgt_request_handle+0xc90/0x1940 [ptlrpc]
        ptlrpc_server_handle_request+0x323/0xbc0 [ptlrpc]
        ptlrpc_main+0xba2/0x1490 [ptlrpc]
      

      It is likely that this was introduced by patch https://review.whamcloud.com/33996 "LU-11303 quota: enforce block quota for chgrp" since it just re-enabled this subtest.

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-quota test_55 - trevis-53vm9 crashed during sanity-quota test_55

            hongchao.zhang Hongchao Zhang
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: